--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ProfileCard</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Cartão de perfil feito com html e css">
+    <meta name="keywords" content="perfil, cartão, profile">
 </head>
 <body>
     <div class="profile-card">
